# mujoco_playground

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING  CONTRIBUTING.md  README.md  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pypi.yml
learning/: README.md  __init__.py  mixed_train_2.py  test_policy.py  tmp.py  tmp_bak.py  train_jax_ppo.py  train_jax_ppo_mixed.py  train_mixed.py  train_rsl_rl.py
learning/notebooks/: dm_control_suite.ipynb  locomotion.ipynb  manipulation.ipynb  training_vision_1.ipynb  training_vision_1_t4.ipynb  training_vision_2.ipynb
mujoco_playground/: __init__.py
mujoco_playground/_src/: collision.py  gait.py  mjx_env.py  random.py  registry.py  registry_test.py  reward.py  wrapper copy.py  wrapper.py  wrapper_mixed.py  wrapper_test.py  wrapper_torch.py
mujoco_playground/_src/dm_control_suite/: README.md  __init__.py  acrobot.py  ball_in_cup.py  cartpole.py  cheetah.py  common.py  dm_control_suite_test.py  finger.py  fish.py  hopper.py  humanoid.py  pendulum.py  point_mass.py  reacher.py  swimmer.py  walker.py
mujoco_playground/_src/dm_control_suite/xmls/: README.md  acrobot.xml  ball_in_cup.xml  cartpole.xml  cheetah.xml  finger.xml  fish.xml  hopper.xml  humanoid.xml  manipulator.xml  pendulum.xml  point_mass.xml  reacher.xml  swimmer.xml  walker.xml
mujoco_playground/_src/locomotion/: __init__.py  locomotion_test.py
mujoco_playground/_src/locomotion/apollo/: base.py  constants.py  joystick.py
mujoco_playground/_src/locomotion/apollo/xmls/: apollo_mjx_feetonly.xml  scene_mjx_feetonly_flat_terrain.xml
mujoco_playground/_src/locomotion/barkour/: joystick.py
mujoco_playground/_src/locomotion/berkeley_humanoid/: base.py  berkeley_humanoid_constants.py  joystick.py  randomize.py
mujoco_playground/_src/locomotion/berkeley_humanoid/xmls/: scene_mjx_feetonly_flat_terrain.xml  scene_mjx_feetonly_rough_terrain.xml  sensor.xml
mujoco_playground/_src/locomotion/g1/: base.py  g1_constants.py  joystick.py  randomize.py
mujoco_playground/_src/locomotion/g1/xmls/: g1_mjx_feetonly.xml  g1_mjx_feetonly_restricted.xml  scene_mjx_feetonly.xml  scene_mjx_feetonly_flat_terrain.xml  scene_mjx_feetonly_rough_terrain.xml  sensor.xml
mujoco_playground/_src/locomotion/go1/: README.md  base.py  getup.py  go1_constants.py  handstand.py  joystick.py  randomize.py
mujoco_playground/_src/locomotion/go1/xmls/: go1_mjx.xml  go1_mjx_feetonly.xml  go1_mjx_fullcollisions.xml  scene_mjx_feetonly_bowl.xml  scene_mjx_feetonly_flat_terrain.xml  scene_mjx_feetonly_rough_terrain.xml  scene_mjx_feetonly_stairs.xml  scene_mjx_flat_terrain.xml  scene_mjx_fullcollisions_flat_terrain.xml  sensor_feet.xml  sensor_fullcollision.xml
mujoco_playground/_src/locomotion/h1/: base.py  h1_constants.py  inplace_gait_tracking.py  joystick.py  joystick_gait_tracking.py
mujoco_playground/_src/locomotion/h1/xmls/: h1_mjx_feetonly.xml  scene_mjx_feetonly.xml
mujoco_playground/_src/locomotion/op3/: base.py  joystick.py  op3_constants.py
mujoco_playground/_src/locomotion/op3/xmls/: op3_mjx_feetonly.xml  scene_mjx_feetonly.xml
mujoco_playground/_src/locomotion/spot/: base.py  getup.py  joystick.py  joystick_gait_tracking.py  spot_constants.py
mujoco_playground/_src/locomotion/spot/xmls/: scene_mjx_feetonly_flat_terrain.xml  scene_mjx_flat_terrain.xml  sensor.xml  spot_mjx.xml  spot_mjx_feetonly.xml
mujoco_playground/_src/locomotion/t1/: base.py  joystick.py  randomize.py  t1_constants.py
mujoco_playground/_src/locomotion/t1/xmls/: scene_mjx_feetonly_flat_terrain.xml  scene_mjx_feetonly_rough_terrain.xml  sensor.xml  t1_mjx_feetonly.xml
mujoco_playground/_src/locomotion_mixed/: __init__.py  locomotion_mixed_test.py  models_compare.py
mujoco_playground/_src/locomotion_mixed/kawaru/: README.md  base.py  batched_model.py  joystick.py  joystick_bak.py  kawaru_constants.py  max_shapes.py  max_shapes_bak.py  model_diffs.pkl  model_diffs_reduced.pkl  randomize.py
mujoco_playground/_src/locomotion_mixed/kawaru/xmls/: kawaru_mjx.xml  kawaru_mjx_feetonly.xml  kawaru_mjx_feetonly2.xml  kawaru_mjx_feetonly3.xml  (+15 more)
mujoco_playground/_src/manipulation/: __init__.py  manipulation_test.py
mujoco_playground/_src/manipulation/aero_hand/: README.md  __init__.py  aero_hand_constants.py  base.py  rotate_z.py
mujoco_playground/_src/manipulation/aloha/: aloha_constants.py  base.py  handover.py  single_peg_insertion.py
mujoco_playground/_src/manipulation/franka_emika_panda/: open_cabinet.py  panda.py  panda_kinematics.py  pick.py  pick_cartesian.py  randomize_vision.py
mujoco_playground/_src/manipulation/franka_emika_panda_robotiq/: panda_robotiq.py  push_cube.py
mujoco_playground/_src/manipulation/leap_hand/: README.md  base.py  leap_hand_constants.py  reorient.py  rotate_z.py
mujoco_playground/config/: README.md  dm_control_suite_params.py  locomotion_mixed_params.py  locomotion_params.py  manipulation_params.py
mujoco_playground/experimental/: brax_network_to_onnx.ipynb
mujoco_playground/experimental/learning/: README.md  ablate_device_topology.ipynb  aloha.ipynb  apollo_joystick.ipynb  cube_reorient.ipynb  cube_rotate.ipynb  dm_control_suite.ipynb  gait_tracking.ipynb  getup.ipynb  handstand.ipynb  humanoid_joystick.ipynb  humanoid_joystick_gait_tracking.ipynb  inference.ipynb  joystick.ipynb  joystick_gait_tracking.ipynb  open_cabinet.ipynb  phase.ipynb  position_cube.ipynb  viz_sim_policies.ipynb
mujoco_playground/experimental/madrona_benchmarking/: README.md  benchmark.py  get_data.sh  make_plots.py  print_tables.py
mujoco_playground/experimental/madrona_benchmarking/data/: madrona_mjx.csv
mujoco_playground/experimental/sim2sim/: README.md  gamepad_reader.py  play_apollo_joystick.py  play_bh_joystick.py  play_g1_joystick.py  play_go1_joystick.py  play_leap_reorient.py  play_t1_joystick.py
mujoco_playground/experimental/sim2sim/onnx/: apollo_policy.onnx  bh_policy.onnx  g1_policy.onnx  go1_policy.onnx  leap_reorient_policy.onnx  t1_policy.onnx
mujoco_playground/experimental/utils/: plotting.py
(+19 files in other folders)
