[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mujoco_playground"
version = "0.0.0"
readme = "README.md"
authors = [
    {name = "Google DeepMind", email = "mujoco@deepmind.com"},
]
requires-python = ">=3.9"
dynamic = ["description"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "etils",
    "flax",
    "jax",
    "lxml",
    "ml_collections",
    "mujoco-mjx",
    "mujoco",
    "tqdm",
    "brax",  # TODO(btaba): Remove this dependency.
]
keywords = ["mjx", "mujoco", "dm_control"]

[project.optional-dependencies]
test = [
    "absl-py",
    "pytest",
    "dm_control",
]
notebooks = [
    "matplotlib",
    "mediapy",
]
dev = [
    "mujoco_playground[test]",
    "mypy",
    "pyink",
    "pytype",
    "ruff",
    "pre-commit",
    "pylint",
    "pytest-xdist",
]
all = [
    "mujoco_playground[dev]",
    "mujoco_playground[notebooks]",
]

[tool.hatch.build.targets.wheel]
packages = ["mujoco_playground"]

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
    "I"  # Import sorting.
]
lint.ignore = [
    "E741", # Ambiguous variable name. (l, O, or I)
    "E501",  # Line too long.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Global statement updates are discouraged.
    "PLW2901"  # For loop variable overwritten.
]
exclude = [
    "mujoco_menagerie/",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["scripts/", "mujoco_menagerie/"]

[tool.pytest.ini_options]
addopts = [
    "--ignore=mujoco_menagerie",
]
testpaths = [
    "tests",
]

[tool.isort]
force_single_line = true
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = ["typing"]
order_by_type = false
group_by_package = true
line_length = 120
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
skip = ["mujoco_menagerie", ".pytype"]
skip_glob = ["**/*.ipynb"]

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
extend-exclude = '''(
 mujoco_menagerie
 | .ipynb$
)'''

[pytype]
inputs = "."
exclude = [
    "**/*_test.py",
    "**/test_*.py",
    "mujoco_menagerie/**",
    "mujoco_playground/_src/wrapper_torch.py",
    "mujoco_playground/learning/getup_rl_games.py"
]
output = ".pytype"
report_errors = true

[tool.hatch.build]
artifacts = [
    "mujoco_playground/mujoco_menagerie/google_barkour_vb/**/*",
    "mujoco_playground/mujoco_menagerie/berkeley_humanoid/**/*",
    "mujoco_playground/mujoco_menagerie/unitree_g1/**/*",
    "mujoco_playground/mujoco_menagerie/unitree_go1/**/*",
    "mujoco_playground/mujoco_menagerie/unitree_h1/**/*",
    "mujoco_playground/mujoco_menagerie/robotis_op3/**/*",
    "mujoco_playground/mujoco_menagerie/boston_dynamics_spot/**/*",
    "mujoco_playground/mujoco_menagerie/aloha/**/*",
    "mujoco_playground/mujoco_menagerie/franka_emika_panda/**/*",
    "mujoco_playground/mujoco_menagerie/robotiq_2f85_v4/**/*",
    "mujoco_playground/mujoco_menagerie/leap_hand/**/*"
]
include = [
    "mujoco_playground/__init__.py",
    "mujoco_playground/_src/**/*",
    "mujoco_playground/config/**/*",
    "mujoco_playground/experimental/**/*",
]
